refactor: 1000 threads